tests/01-syntax/inv_properties.ml
let () = LOG "msg" PROPERTIES 0 LEVEL DEBUG
